# bugsbuny243-solana-auditor-skill

./: README.md  SKILL.md  ast_nodes.py  capabilities.py  codegen_c.py  codegen_go.py  diagnostics.py  formatter.py  install.sh  interpreter.py  koschei.py  lexer.py  modules.py  paketle.sh  parser.py  report-generator.md  scoring-rules.md  semantic.py  sybil-radar.md  token-risk.md
.github/scripts/: apply_interpreter_security_v011.py  fix_interpreter_security_editor.py  write_security_v011_verbatim.py  write_security_v011_verbatim_tests_docs.py
.github/workflows/: apply-v011.yml  red-team.yml  (+13 more)
.packaging/part1/: README.md  __main__.py  pyproject.toml  tests.yml
.security/: capability_contract_patch.py  capability_contract_patch_v2.py  type_integrity_diagnostics_patch.py  type_integrity_patch.py
docs/: effective-koschei.md  language-core.md
examples/: app.ks  capability.ks  control_flow.ks  hello.ks  holders.ks  match.ks  native_safe_types.ks  risk.ks  runtime_demo.ks  safe_types.ks  showcase.ks
koschei/: __init__.py  capabilities.py  cli.py  codegen_go.py  diagnostics.py  formatter.py  interpreter.py  lexer.py  modules.py  parser.py  semantic.py
tests/: test_acceptance_tmp.py  test_capabilities.py  test_cli.py  test_codegen_go.py  test_control_flow.py  test_data_structures.py  test_diagnostics.py  test_formatter.py  test_interpreter.py  test_interpreter_red_team.py  test_lexer.py  test_match.py  test_modules.py  test_native_safe_types.py  test_parser.py  test_safe_types_codegen.py  test_security_regressions.py  test_semantic.py  test_type_integrity_security.py
(+2 files in other folders)
